--- a/my-portal-old.html
+++ b/my-portal-old.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ivy Tutors Academy</title>
+  <title>Ivy Nexus Global</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta name="robots" content="noindex, nofollow" />
@@ -93,7 +93,7 @@
       <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 id="title">Ivy Tutors Academy<span>.</span></h1>
+        <h1 id="title">Ivy Nexus Global<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -127,7 +127,7 @@
 
   <section id="hero-animated" class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
-      <h2>Welcome to your <span>Academy</span></h2>
+      <h2>Welcome to your <span>Nexus</span></h2>
       <p>
         Find personalized 1-1 or small group tutoring, request specialized courses, and join pre-set programs, all in one place.
       </p>
@@ -341,7 +341,7 @@
   
           <div class="d-flex flex-column align-items-center align-items-lg-start">
             <div class="copyright">
-              &copy; Copyright <strong><span>Ivy Tutors Academy</span></strong> 2023. All Rights Reserved
+              &copy; Copyright <strong><span>Ivy Nexus Global</span></strong> 2023. All Rights Reserved
             </div>
             <div class="credits">
               <!-- All the links in the footer should remain intact. -->
