--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ivy Tutors Academy</title>
+  <title>Ivy Nexus Global</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -107,7 +107,7 @@
       <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 id="title">Ivy Tutors Academy<span>.</span></h1>
+        <h1 id="title">Ivy Nexus Global<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -169,10 +169,10 @@
                 <div class="corner2"></div>
                 <div class="corner-fold"></div>
                 <div class="page-text w-richtext">
-                  <h3><strong><br>The Ivy Tutors Academy</strong></h3>
+                  <h3><strong><br>The Ivy Nexus Global</strong></h3>
                   <h6>HISTORY</h6>
                   <p></p>
-                  <p class="book_p"><i>The Ivy Tutors Academy started as a humble student group out of Harvard University students to spreading high-level educational opportunities worldwide.</i></p><br>
+                  <p class="book_p"><i>The Ivy Nexus Global started as a humble student group out of Harvard University students to spreading high-level educational opportunities worldwide.</i></p><br>
                   <p class="book_p">Our first courses launched in March 2022, offering our mentorship services to friends and family in the nearby community. 
                     Courses primarily centered around STEM subjects like mathematics or physics.
                     Ever since then, our students hail from all around the United States, China, Japan, Philippines, Germany, India, and more!</p><br>
@@ -251,7 +251,7 @@
           </div>
 
           <div class="col-lg-7">
-            <h3 class="pt-0 pt-lg-5">The Ivy Tutors Academy</h3>
+            <h3 class="pt-0 pt-lg-5">The Ivy Nexus Global</h3>
 
             <!-- Tabs -->
             <ul class="nav nav-pills mb-3">
@@ -266,7 +266,7 @@
               <div class="tab-pane fade show active" id="tab1">
 
                 <p class="fst-italic">
-                  The Ivy Tutors Academy started as a humble student group out of Harvard University dedicated to spreading high-level educational 
+                  The Ivy Nexus Global started as a humble student group out of Harvard University dedicated to spreading high-level educational 
                   opportunities worldwide.
                 </p>
 
