--- a/course-list.html
+++ b/course-list.html
@@ -15,8 +15,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ivy Tutors Academy</title>
-  <meta content="Ivy Tutors Academy: Course List" name="title">
+  <title>Ivy Nexus Global</title>
+  <meta content="Ivy Nexus Global: Course List" name="title">
   <meta content="Ready to learn from the best? Our experienced mentors are hand-picked from Harvard, MIT, Princeton, and other T10 schools to teach almost any subject!" name="description">
   <meta content="tutoring,tutoring services,mentorship,college,college counselling,tutoring near me,online tutoring,math tutor,homework,sat tutoring,act tutoring,chemistry tutoring,biology tutoring,physics tutoring,english tutoring,ap tutoring" name="keywords">
 
@@ -103,7 +103,7 @@
       <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 id="title">Ivy Tutors Academy<span>.</span></h1>
+        <h1 id="title">Ivy Nexus Global<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
