--- a/request-form.html
+++ b/request-form.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ivy Tutors Academy</title>
+  <title>Ivy Nexus Global</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <!-- Private Page -->
@@ -204,7 +204,7 @@
       <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 id="title">Ivy Tutors Academy<span>.</span></h1>
+        <h1 id="title">Ivy Nexus Global<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -496,7 +496,7 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>Ivy Tutors Academy</span></strong> 2023. All Rights Reserved
+            &copy; Copyright <strong><span>Ivy Nexus Global</span></strong> 2023. All Rights Reserved
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
