--- a/tutor-forgot-password.html
+++ b/tutor-forgot-password.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ivy Tutors Academy</title>
+  <title>Ivy Nexus Global</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta name="robots" content="noindex, nofollow" />
@@ -188,7 +188,7 @@
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
       <a href="tutor-search.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
-        <h1 id="title">Ivy Tutors Academy<span>.</span></h1>
+        <h1 id="title">Ivy Nexus Global<span>.</span></h1>
       </a>
 
     </div>
